# Local-Mind

./: .env  .env.example  .gitignore  AGENTS.md  AGENT_PHASE3_COMPLETE.md  ARCHITECTURE_EVALUATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  ENV_CONSOLIDATION.md  OPERATIONS.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  README.md  RED_TEAM_TESTING_COMPLETE.md  REPAIR_LOG.md  SECURITY.md  SETUP.md  USER_GUIDE.md  _agent_verifier_async_upload.py  _agent_verifier_bugfixes.py  _agent_verifier_polling.py  _verify_no_hardcoded_urls.sh  activate.sh  debug_upload.py  pyproject.toml  pytest.ini  reproduce_bug.py  run_tests.sh  setup_env.sh  start.sh
apps/backend/: .env  .env.example  .gitignore  AGENTS.md  DEVICE_MANAGER_README.md  Dockerfile  circuit_breaker.py  config.py  connection_pool.py  device_manager.py  exceptions.py  import_test.txt  logging_config.py  main.py  metrics.py  rate_limiter.py  requirements.txt  requirements_device_manager.txt  schemas.py  test_device_manager.py  test_fe_doc.txt  timeout_utils.py
apps/frontend/: .env.example  .gitignore  AGENTS.md  Dockerfile  QA_DEBT.md  build_output.txt  next.config.js  (+5 more)
data/: .gitkeep
docs/: API_REFERENCE.md  ARCHITECTURE.md  SECURITY_SUMMARY.md  SOURCE_MANAGEMENT_IMPLEMENTATION.md  TROUBLESHOOTING.md  TUTORIALS.md  functional_documentation.md
infrastructure/: tuning_config.py
logs/: .gitkeep
scripts/: AGENTS.md  health_check.py  init.sh  setup_native_mac.sh  start_backend.sh  start_frontend.sh  watchdog.sh
tests/: AGENTS.md  conftest.py  requirements-test.txt  test_api_v1.py  verify_release_v2.py
(+109 files in other folders)
