[project]
name = "sovereign-cognitive-engine"
version = "0.1.0"
description = "Local, offline-first NotebookLM clone with GraphRAG"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Markers for test categorization
markers = [
    "unit: Fast, no I/O, mocks only. Run with --strict-markers",
    "integration: Mocks external APIs but uses real DB drivers",
    "e2e: End-to-end tests. Requires live containers (nerdctl compose up)",
    "slow: Tests that take more than 5 seconds",
]

# Default options
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",  # Show summary of all non-passing tests
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["apps/backend"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 60
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
